data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4526.wast
;; 5. **Boundary Condition Check**: Test the `call_indirect` call with an index exactly at the boundary of the table size. This ensures the proper handling of edge cases and boundary checks in the table.

(assert_invalid
 (module
  (type (func (param i32) (result i32)))
  (table funcref (elem))
  (func (result i32)
   (call_indirect (type 0) (i32.const 0) (i32.const 0))
  )
 )
 "type mismatch"
)